# notme-cube

./: .dockerignore  Caddyfile  Dockerfile  Makefile  conftest.py  context.py  cube_config.yml  env.example  log.py  main_app.py  main_shared.py  pyproject.toml  readme.md  requirements.txt
deploy/: pod.yml
docker/: docker-compose.yml
models/: __init__.py  cloudflare_ingress.py  cluster.py  cluster_request.py  container.py  cube_deploy.py  cube_pod.py  cube_project.py  daemon.py  machine.py  passw.py  service.py  user.py  worker.py  workq.py
nginx/: notme.conf
routers/: __init__.py  base.html  home.html  machines.py  passw.py  passw_list.py  workq.py
routers/auth/: login.html  login.py  login_error.html  login_oauth.py
routers/clusters/: clusters.py  list.html  list_table.html
routers/cube/: cube_deploys.py  cube_ingress.py  cube_pods.py  cube_projects.py  cube_root.html  cube_root.py
routers/daemons/: daemons.py  list.html  list_table.html
routers/machines/: __init__.py  containers.py  list.html  list_table.html  machines.py  show.html
routers/passw/: __init__.py  list.html  list_passw.html  list_table.html  new.html  orgs_list.html  orgs_list_table.html  passw_list.py  passw_manage.py
routers/users/: __init__.py  login.html  login.py  login_oauth.py  logout.py
routers/workers/: list.html  list_table.html  workers.py
routers/workq/: __init__.py  list.html  list_table.html  workq.py
scripts/: cloudfare-utils  cloudflare-utils  cube-utils  db-util  db-utils  users-util
scripts/clusters/: clusters-utils
scripts/hetzner/: server-utils  ssh-keys-utils
scripts/nats/: work-bench
scripts/vps/: files-rsync  postgres-boot  psql_client  vps-utils
scripts/workq/: workq-factory  workq-utils
supervisor/: dev.conf  dev.workq.conf
(+129 files in other folders)
