[project]
name = "notme-paas"
version = "0.1.0"
description = "notme paas,auth"
readme = "README.md"
dependencies = [
    "ruff>=0.6.4",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E402"]

line-length = 180

[tool.ruff.isort]
force-sort-within-sections = true
order-by-type = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
